<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="0dp"
        android:background="#570FD8"
        android:text="@string/weather_in_major_cities"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/Frame1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/NYCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/NYimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/NYWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/NYWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/NYTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Frame2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Frame1">

        <TextView
            android:id="@+id/SGCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SGimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/SGWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SGWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/SGTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Frame3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Frame1">

        <TextView
            android:id="@+id/MUMCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/MUMimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/MUMWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/MUMWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/MUMTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Frame4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Frame3">

        <TextView
            android:id="@+id/DELCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/DELimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/DELWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/DELWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/DELTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Frame5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Frame3">

        <TextView
            android:id="@+id/SYDCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SYDimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/SYDWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/SYDWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/SYDTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Frame6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/green"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Frame5">

        <TextView
            android:id="@+id/MELCtryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/current_country"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/MELimageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/weather_icon"
            android:src="@drawable/pic_01d" />

        <TextView
            android:id="@+id/MELWeatherId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/MELWeatherDiscId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_weather_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/MELTempId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/current_temp"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="51dp"
        android:text="@string/back_button_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Frame5" />

</androidx.constraintlayout.widget.ConstraintLayout>